# Minerva

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  PRD.md  ROADMAP.md  THREAT_MODEL.md
docs/adr/: 0001-research-evidence-model.md  0002-system-boundaries.md  0003-explicit-byok-model-assistance.md  0004-staged-restore-audit-publication.md
scripts/: installed_smoke.py  static_security_check.py  verify_dist.py
src/minerva/: __init__.py  py.typed
src/minerva/api/: __init__.py  errors.py  models.py  routes.py
src/minerva/assist/: __init__.py  models.py  service.py
src/minerva/cli/: __init__.py  _common.py  credentials.py  demo.py  main.py
src/minerva/core/: __init__.py  audit.py  db.py  doctor.py  errors.py  operations.py  types.py
src/minerva/core/migrations/: 0001_research_core.sql  0002_findings_and_exports.sql  __init__.py
src/minerva/evidence/: __init__.py  integrity.py  models.py  service.py
src/minerva/integrations/: __init__.py  research_packet.py  research_packet_file.py  research_request.py  research_request_file.py  safe_artifact_file.py
src/minerva/integrations/ai/: __init__.py  anthropic.py  openai.py
src/minerva/research/: __init__.py  models.py  service.py
src/minerva/sources/: __init__.py  files.py  integrity.py  models.py  service.py
src/minerva/synthesis/: __init__.py  models.py  request_fulfillment.py  service.py
src/minerva/web/: __init__.py  app.py  security.py
src/minerva/web/static/: style.css
src/minerva/web/templates/: base.html  brief_preview.html  claim_detail.html  mission_detail.html  missions.html
tests/: conftest.py  test_ai_providers.py  test_api.py  test_assist.py  test_cli.py  test_database.py  test_demo.py  test_doctor.py  test_evidence.py  test_gate_scripts.py  test_packet_cli.py  test_request_cli.py  test_research.py  test_research_packet.py  test_research_request.py  test_source_files.py  test_sources.py  test_synthesis.py  test_web.py  test_web_security.py
tests/fixtures/: minerva.research-brief.v2.golden.json  minerva.research-request.v1.golden.json
