[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "minerva-research"
version = "0.2.0a1"
description = "Local-first, provenance-first research laboratory for humans and AI agents"
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [{ name = "Kevin Lee" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.18,<1",
  "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
ai-openai = [
  "openai>=2.46,<3",
]
ai-anthropic = [
  "anthropic>=0.117,<1",
]
ai = [
  "anthropic>=0.117,<1",
  "openai>=2.46,<3",
]
dev = [
  "anthropic>=0.117,<1",
  "build>=1.2,<2",
  "httpx>=0.27,<1",
  "mypy>=1.13,<2",
  "openai>=2.46,<3",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.8,<1",
]

[project.scripts]
minerva = "minerva.cli.main:main"
minerva-demo = "minerva.cli.demo:main"

[project.urls]
Repository = "https://github.com/Ayyitskevin/Minerva"
Issues = "https://github.com/Ayyitskevin/Minerva/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
minerva = [
  "py.typed",
  "core/migrations/*.sql",
  "web/templates/*.html",
  "web/templates/**/*.html",
  "web/static/*",
]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "-ra",
  "--cov=minerva",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=85",
]
testpaths = ["tests"]
markers = [
  "security: security-boundary and adversarial tests",
  "packaging: build or installed-artifact tests",
]

[tool.coverage.run]
branch = true
source = ["minerva"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise AssertionError",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S", "DTZ", "RUF"]
ignore = [
  "S101", # assertions are the native pytest contract
]

[tool.ruff.lint.per-file-ignores]
"src/minerva/sources/files.py" = ["S105"]
"tests/**/*.py" = ["S104", "S105", "S106", "S108"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
packages = ["minerva"]

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "uvicorn.*"]
ignore_missing_imports = true
